--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -3,6 +3,9 @@
 		.container
 			width: 1000px
 
+	.navigation__logo
+		margin-left: 20px
+
 @media screen and ( max-width: 1070px )
 	.section
 		&__side
@@ -46,12 +49,19 @@
 		.section__content
 			display: none
 
-@media screen and ( max-width: 992px )
+	.design__item:hover .design__img-wrapper
+		transform: none
+
+@media screen and ( max-width: 1020px )
 	.navigation
 		justify-content: center
 
 		&__logo
 			margin-bottom: 20px
+
+@media screen and ( max-width: 992px )
+	.navigation
+		justify-content: center
 
 	.find-us
 		column-gap: 30px
@@ -236,7 +246,7 @@
 	.heading
 		font-size: 50px
 
-@media screen and ( max-width: 400px )
+@media screen and ( max-width: 450px )
 	.heading
 		display: flex
 		flex-direction: column
